syntax = "proto3";
package it.valeriovaudi.room.model;

option java_multiple_files = true;
option java_package = "it.valeriovaudi.room.model";

message CreateRoomInvitationRequest {
  string my_username = 1;
  string guest_username = 2;
}
message CreateRoomInvitationResponse {
  string room_id = 1;
}

message CreateRoomInvitationConfirmationRequest {
  string my_username = 1;
  string guest_username = 2;
}
message CreateRoomInvitationConfirmationResponse {
  string room_id = 1;
}

service RoomService {

  rpc createNewRoomInvitation (CreateRoomInvitationRequest) returns (CreateRoomInvitationResponse) {}
  rpc createNewRoomInvitationConfirmation (CreateRoomInvitationConfirmationRequest) returns (CreateRoomInvitationConfirmationResponse) {}

}

